--- a/app/assets/stylesheets/components/_ticket_chatroom.scss
+++ b/app/assets/stylesheets/components/_ticket_chatroom.scss
@@ -25,10 +25,29 @@
   display: flex;
   align-items: center;
   width: 100%;
+  overflow-x: auto;
+  white-space: nowrap; /* Ensures the content stays on a single line */
+
 }
 
 .card-body p {
   margin: 1px 0;
+}
+
+.card-body {
+  background-color: $white;
+  border-radius: 4px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+  height: 3.5rem;
+  padding-left: 4px;
+  border: 1px solid #E7E7E7;
+  padding: 0.375rem 0.75rem;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap; /* Ensures the content stays on a single line */
+
 }
 
 .chat {
