--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,7 +11,7 @@
   color: white;
 }
 
-.btn-primary {
+.btn-flat {
   text-decoration: none;
   color: white;
   padding: 8px 24px;
@@ -20,7 +20,7 @@
   transition: background 0.3s ease;
 }
 
-.btn-primary:hover {
+.btn-flat:hover {
   background: $darkblue;
   color: white;
 }
