--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -4,7 +4,7 @@
     <h1>Contact Support</h1>
   </div>
   <div class="d-flex justify-content-center my-3">
-    <button data-wallet-target="buttonOpen" data-action="click->wallet#openModal" class="btn btn-open">Connect Wallet</button>
+    <button data-wallet-target="buttonOpen" data-action="click->wallet#openModal" class="btn btn-flat">Connect Wallet</button>
   </div>
 
 <div class="d-flex align-items-center justify-content-center  my-3">
@@ -36,7 +36,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, class:"btn btn-primary mt-3", class: 'btn btn-primary' %>
+      <%= f.button :submit, class:"btn btn-flat mt-3"%>
     </div>
   <% end %>
 </div>
