--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -82,7 +82,7 @@
         <div class="form-group">
           <%= f.input :content, label: "New Message", input_html: { class: "form-control", style: "width: 100%; height: 370px;" } %>
         </div>
-        <%= f.button :submit, "Send", class: "btn btn-flat" %>
+        <%= f.button :submit, "Send", class: "btn btn-flat", type:"submit" %>
       <% end %>
     </div>
   </div>
