--- a/app/views/shared/_vertical_navbar.html.erb
+++ b/app/views/shared/_vertical_navbar.html.erb
@@ -15,7 +15,7 @@
       </li>
       <li class="nav-item active">
         <%= link_to  tickets_path, class: "nav-link fs-1" do %>
-        <i class="fa-brands fa-bitcoin fa-lg"></i>
+        <i class="fa-regular fa-message fa-lg"></i>
         <% end %>
       </li>
       <li class="nav-item active">
