--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,26 @@
   <head>
     <title>CryptoZendesk</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Seamless Support for Web3</title>
+    <meta name="description" content="ChainCare">
+
+    <!-- Facebook Open Graph data -->
+    <meta property="og:title" content="Seamless Support for Web3">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="<%= request.original_url %>">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:description" content="Customer support app offering real-time assistance for Web3 companies to support their clients">
+    <meta property="og:site_name" content="Seamless Support for Web3">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@twitter">
+    <meta name="twitter:title" content="Seamless Support for Web3">
+    <meta name="twitter:description" content="Customer support app offering real-time assistance for Web3 companies to support their clients">
+    <meta name="twitter:creator" content="@twitter">
+    <meta name="twitter:image:src" content="logo.png">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
