--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="col-6">
-        <%= simple_form_for :search, class: "col-6",data: { action: "click->explorer#search" } do |f| %>
+        <%= simple_form_for :search, class: "col-6", data: { action: "click->explorer#search" } do |f| %>
           <div class="search-form-control form-group">
             <%= f.input :query, label: false, input_html: { data: { "explorer-target": "sourceInput"} }, class: "form-control", placeholder: "Enter your client's wallet/transactions informations here"%>
             <%# <div data-explorer-target="snackbar" id="snackbar"></div> %>
@@ -78,12 +78,13 @@
     </div>
 
     <div class="col-3 new-message-container m-2">
-      <%= simple_form_for([@chatroom, @message]) do |f| %>
-        <div class="form-group">
-          <%= f.input :content, label: "New Message", input_html: { class: "form-control", style: "width: 100%; height: 370px;" } %>
-        </div>
-        <%= f.button :submit, "Send", class: "btn btn-flat", type:"submit" %>
-      <% end %>
+    <%= simple_form_for([@chatroom, @message]) do |f| %>
+  <div class="form-group">
+    <%= f.input :content, label: "New Message", input_html: { class: "form-control", style: "width: 100%; height: 370px;" } %>
+  </div>
+  <%= f.submit "Send", class: "btn btn-flat" %>
+<% end %>
+
     </div>
   </div>
 </div>
