--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,3 +13,14 @@
   flex-direction: column;
   color: $verydarkblue;
 }
+
+h1{
+  font-size: 72px;
+}
+
+.container-fluid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
