--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -27,3 +27,10 @@
 .footer .fa-heart {
   color: #D23333;
 }
+
+.footer-divider {
+  border: none;
+  border-top: 1px solid #070707;
+  margin: 20px 0;
+}
+
