--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: $verylightblue;
+  background-color: $verydarkblue;
   color: $primary;
   justify-content: space-between;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
