--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,22 +3,23 @@
 <div class="container-fluid ">
   <div class="row m-3 justify-content-center">
     <div class="col-lg-6 col-md-8 col-sm-12">
-      <h1>Seamless Support for Web3</h1>
-      <p>Our customer support application makes it easier to use decentralized web (Web 3) technologies. We provide real-time help and proactive solutions to help you navigate the complexities of these technologies.</p>
-      <%= link_to "Create a Ticket", new_ticket_path, class: "btn btn-primary text-light rounded shadow-sm mt-3" %>
+      <h1 class="mb-3">Seamless Support for Web3</h1>
+      <p class="mb-4">Our customer support application makes it easier to use decentralized web (Web 3) technologies. We provide real-time help and proactive solutions to help you navigate the complexities of these technologies.</p>
+      <%= link_to "Create a Ticket", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3 " %>
+      <%= link_to "Watch Demo", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3 ml-5" %>
     </div>
     <div class="col-lg-6 col-md-8 col-sm-12 mt-3">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
          <div class="carousel-inner" style="height: 500px;"> 
           <div class="carousel-item active">
-            <img src="https://as2.ftcdn.net/v2/jpg/03/06/82/35/1000_F_306823504_TYT9uCN3CXoBf3u1G5nvA49Ab1RyazYu.jpg" class="d-block w-100" alt="...">
+            <img src="https://as2.ftcdn.net/v2/jpg/04/94/81/79/1000_F_494817999_XhozLcbONJGQcOCV6vnidux5eHyytvpn.jpg" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item">
+          <%# <div class="carousel-item">
             <img src="https://as2.ftcdn.net/v2/jpg/03/06/82/35/1000_F_306823504_TYT9uCN3CXoBf3u1G5nvA49Ab1RyazYu.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="https://as1.ftcdn.net/v2/jpg/04/28/71/28/1000_F_428712888_retbJcXmNCkADSne4lyw3boFQ6PXTZwB.jpg" class="d-block w-100" alt="...">
-          </div>
+          </div> %>
         </div>
       </div>
     </div>
