--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,14 +27,14 @@
       <li class="nav-item">
        <a class="nav-link" href="#">Pricing</a>
       </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#">Solution</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Demo</a>
-      </li>
+      <%# <li class="nav-item">
+       <a class="nav-link" href="#"></a>
+      </li> %>
       <li class="nav-item">
         <a class="nav-link" href="#">Resources</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact Us</a>
       </li>
     </ul>
 
