--- a/app/assets/stylesheets/components/_explorer.scss
+++ b/app/assets/stylesheets/components/_explorer.scss
@@ -86,6 +86,30 @@ However, delay the fade out process for 2.5 seconds */
   animation: fadeinMulti 0.5s;
 }
 
+.loader {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  display: none;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 /* Animations to fade the snackbar in and out */
 
