--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,7 +18,7 @@ h1{
   font-size: 72px;
 }
 
-.container-fluid {
+.container-dorothy{
   display: flex;
   align-items: center;
   justify-content: center;
