changes ticket sorting to reflect last update

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -38,7 +38,8 @@
     </thead>
 
   <tbody>
-     <% @tickets.reverse.each do |ticket| %>
+     <% sorted_tickets = @tickets.sort_by {|ticket| ticket.updated_at} %>
+     <% sorted_tickets.reverse.each do |ticket| %>
       <% if ticket.user.present? %>
         <% if ticket.user == @current_user %>
           <tr onclick="window.location='<%= chatroom_path(ticket.chatroom) %>';">
