--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -24,6 +24,25 @@
     <p>Welcome back <%= @current_user.first_name %>!</p>
   </div>
 
+  <%# <%= form_tag tickets_path, :method => 'get' do %>
+   <%# <p>
+      <%= text_field_tag :search, params[:search] %>
+      <%#<%= submit_tag "Search", :name => nil %>
+    <%#</p>
+  <% end %>
+  <div class="flex justify-end mb-1">
+    <%= form_with url: tickets_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "border border-blue-500 rounded p-2",
+        autocomplete: "off",
+        placeholder: "Search by assignee"
+      %>
+      <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+
+
   <table class="table table-hover">
     <thead>
       <tr>
