--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -1,8 +1,8 @@
 <%= render 'shared/vertical_navbar'%>
 
 <div class="container-fluid moved">
-  <div class="row justify-content-center">
-    <div class="col-xs-12 ms-4 mt-4">
+  <div class="row">
+    <div class="col-12 col-lg-4 ms-4 mt-4">
         <div class="account-card">
           <h2 class="mb-4">My Account</h2>
           <div class="image">
