--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -39,6 +39,12 @@
           <div class="mx-5">Exodus</div>
         </div>
       </button>
+      <button data-action="click->wallet#keplrConnect" class="btn btn-primary">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+          <div><%= image_tag "keplr.svg", style: 'height:30px;size:24;' %></div>
+          <div class="mx-5">Keplr Wallet</div>
+        </div>
+      </button>
   </section>
 
   <div data-wallet-target="overlay" data-action="click->wallet#closeModal" class="overlay hidden"></div>
