--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,15 +26,83 @@
       </div>
     </div>
   </div>
-</div>
+
+  <h2 class="text-center" >Features</h2>
+ <div class="features-box"> 
+
+
+  <div class="features-boxs"> 
+      <div class="feature-box">
+        <h4 class="font-weight-bold">Efficient Ticket Management</h4>
+        <div class="feature1">
+          <p>Efficiently manage user support tickets for web3 technologies.</p>
+          <p>Our application streamlines the process of logging, tracking, and resolving tickets, ensuring that users' issues and inquiries are addressed promptly and effectively.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="features-boxs"> 
+      <div class="feature-box">
+        <h4>Integration with Web3 Tools</h4>
+        <div class="feature1">
+          <p>Experience seamless integration with a wide range of web3 tools, wallets, and decentralized applications (dApps) right within our platform.</p>
+          <p>Enhance your user experience and maximize your productivity with our comprehensive integration features.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="features-boxs"> 
+      <div class="feature-box">
+        <h4>Real-time Chat with Experts</h4>
+        <div class="feature1">
+          <p>Connect with our knowledgeable support agents in real-time through our integrated chat feature.</p>
+           Get immediate assistance, guidance, and solutions for your web3-related challenges.</p>
+        </div>
+      </div>
+    </div>
+   </div>
+   <section class="section">
+     <div class="whycontainer">     
+          <div class="paragraph-container">
+            <h2 class="text-center">Why Chaincare?</h2>
+            <%# <p>"At ChainCare, we are dedicated to providing exceptional support for web3 technologies, empowering our clients to navigate the world of cryptocurrencies, blockchain, and decentralized applications with confidence.</p>
+            <p> With ChainCare, you gain a trusted partner that streamlines ticket management, offers in-depth integration features, and ensures prompt resolution of your queries.</p>
+            <p>Choose ChainCare for unparalleled support, enabling you to harness the full potential of web3 technologies effortlessly."</p> %>
+          <%# </div> %>
+        <%# <div class="image-container">
+            <img src="https://as1.ftcdn.net/v2/jpg/02/19/97/72/1000_F_219977235_ps8cMnGbh5DRN4kyyLMDDPdPM5J62rRh.jpg" alt="Blockchain Image" class="resized-image" >
+        </div>
+     </div> %>
+    </section>
+
+    <div class="card-product">
+      <img src="https://as1.ftcdn.net/v2/jpg/02/19/97/72/1000_F_219977235_ps8cMnGbh5DRN4kyyLMDDPdPM5J62rRh.jpg" alt="Blockchain Image" class="resized-image">
+      <div class="card-product-infos">
+        <h2>Quick and easy resolutions</h2>
+        <p> With ChainCare, you gain a trusted partner that streamlines ticket management, offers in-depth integration features, and ensures prompt resolution of your queries.</p>
+            <p>Choose ChainCare for unparalleled support, enabling you to harness the full potential of web3 technologies effortlessly."</p>
+     </div>
+    </div>
 
 
 
-<div class="footer">
-  <div class="footer-links">
-    <a href="https://github.com/AngelLozan/crypto_zendesk" target="_blank"><i class="fab fa-github"></i></a>
+   <h2 class="text-center">Get Started</h2>
+     <div class="get-started">
+       <%= link_to "Start Free Trial ", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3 " %>
+        <%= link_to "Watch Demo", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3 ml-5" %>
+     </div>
+ 
+       <h2> Contact Us</h2>
+        <p>Enquiries: support@chaincare.tech</p>
+    
+  <div class="footer">
+    <div class="footer-links">
+      <a href="https://github.com/AngelLozan/crypto_zendesk" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+    <div class="footer-copyright">
+      ChainCare is created with <i class="fas fa-heart"></i> by Tobi, Scott, Dorothy, Corentin, Elena
+    </div>
   </div>
-  <div class="footer-copyright">
-    ChainCare is created with <i class="fas fa-heart"></i> by Tobi, Scott, Dorothy, Corentin, Elena
-  </div>
-</div>
+
+
+  
