--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,9 +18,98 @@ h1{
   font-size: 72px;
 }
 
+h2{
+  font-size:48px;
+  font-weight: bold;
+}
 .container-dorothy{
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+}
+
+.features-box {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: $verydarkblue;
+}
+
+.features-boxs {
+  flex-basis: calc(33.33% - 20px);
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 15px;
+  margin-right: 20px;
+  background-color: white;
+}
+
+.feature-box:last-child {
+  margin-right: 0;
+}
+.whycontainer {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  margin-top: 50px;
+}
+
+.image-container {
+  flex: 0 0 auto;
+  margin-right: 20px; 
+float: right;
+}
+
+.paragraph-container {
+  flex: 1 1 auto;
+  float: left;
+  align-items: center;
+}
+.resized-image{
+  width:300px;
+  height:auto;
+  // border-radius: 50%;
+  height:150px;
+  margin-top: 60px;
+  
+}
+.get-started{
+ align-items: center ;
+}
+
+.card-product {
+  overflow: hidden;
+  height: 200px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+}
+
+.card-product img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
+.card-product h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
+  padding: 20px;
 }
