--- a/app/views/shared/_vertical_navbar.html.erb
+++ b/app/views/shared/_vertical_navbar.html.erb
@@ -10,22 +10,22 @@
     <ul class="nav flex-column">
       <li class="nav-item active">
         <%= link_to  "/", class: "nav-link fs-1" do %>
-        <i class="fa-solid fa-house"></i>
+        <i class="fa-solid fa-house fa-2xs"></i>
         <% end %>
       </li>
       <li class="nav-item active">
         <%= link_to  tickets_path, class: "nav-link fs-1" do %>
-        <i class="fa-regular fa-message fa-lg"></i>
+        <i class="fa-regular fa-message fa-2xs"></i>
         <% end %>
       </li>
       <li class="nav-item active">
         <%= link_to  destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link fs-1" do %>
-        <i class="fa-solid fa-right-from-bracket"></i>
+        <i class="fa-solid fa-right-from-bracket fa-2xs"></i>
         <% end %>
       </li>
       <li class="nav-item">
        <%= link_to  account_path, class: "nav-link fs-1" do %>
-       <i class="fa-solid fa-gear"></i>
+       <i class="fa-solid fa-gear fa-2xs"></i>
        <% end %>
       </li>
     </ul>
