--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -36,7 +36,7 @@
         params[:query],
         class: "border border-blue-500 rounded p-2",
         autocomplete: "off",
-        placeholder: "Search by assignee"
+        placeholder: "Filter"
       %>
       <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
     <% end %>
