--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,69 +1,46 @@
 <% if home %>
-<div class="navbar navbar-expand">
-  <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag asset_path('logo.png'), class: "logo-image"%>
-    <% end %>
+  <div class="navbar navbar-expand-sm">
+    <div class="container-fluid">
+      <%= link_to root_path, class: "navbar-brand" do %>
+        <%= image_tag asset_path('logo.png'), class: "logo-image"%>
+      <% end %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <%# <ul class="nav justify-content-center">
-     <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li> %>
-      <li class="nav-item">
-       <a class="nav-link active" aria-current="page" href="#">Products</a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <%# <li class="nav-item">
-       <a class="nav-link" href="#"></a>
-      </li> %>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Resources</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
-      </li>
-    </ul>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Tickets", tickets_url, class: "nav-link" %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
           </li>
           <li class="nav-item">
-            <%= link_to "Account", account_path, class: "nav-link" %>
+            <a class="nav-link" href="https://www.chaincare.tech/tickets/new">Create a Ticket</a>
           </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <% unless @current_user.photo.key.nil? %>
-              <%= cl_image_tag @current_user.photo.key, class: "avatar", alt: "dropdown menu", crop: :fill%>
-            <% end %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
+          <% if user_signed_in? %>
+            <li class="nav-item active">
+              <%= link_to "Tickets", tickets_url, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Account", account_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item dropdown">
+              <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <% unless @current_user.photo.key.nil? %>
+                  <%= cl_image_tag @current_user.photo.key, class: "avatar", alt: "avatar", crop: :fill%>
+                <% end %>
+              </a>
+              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              </div>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 <% end %>
