--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container" data-controller="wallet" data-wallet-project-id-value="<%= ENV['PROJECT_ID'] %>">
 
   <div class="d-flex justify-content-center my-3">
-    <h1>Contact Support</h1>
+    <h2 class="m-4">Contact Support</h2>
   </div>
   <div class="d-flex justify-content-center my-3">
     <button data-wallet-target="buttonOpen" data-action="click->wallet#openModal" class="btn btn-flat">Connect Wallet</button>
