--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -2,8 +2,8 @@
 
 <div class="container-fluid moved">
   <div class="row justify-content-center mt-5">
-    <div class="col-8">
-      <h1 class="text-center">Ticket #<%= @ticket.id %> Details</h1>
+    <div class="col-12 col-lg-8">
+      <h2 class="text-center mb-4">Ticket #<%= @ticket.id %> Details</h2>
       <div class="mb-2">
         <div class="card-body text-center">
           <p class="text-center"><strong>Requester : </strong> <%= @ticket.client_email %></p>
