--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -3,15 +3,17 @@
   color: $primary;
   justify-content: space-between;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-  height: 70px;
+
   margin-bottom: 0px;
+  width: 100vw;
 }
 
-@media (min-width: 500px) {
-  .toggleBtn {
-    display: flex;
-    align-items: center;
-  }
+.navbar button.navbar-toggler span.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+}
+
+.navbar-toggler {
+  --bs-navbar-toggler-border-color: white;
 }
 
 .nav-item .nav-link {
@@ -36,7 +38,7 @@
 }
 
 .logo-image {
-  width: 80px; /* Adjust the size as per your preference */
+  width: 80px;
   border-radius: 4px;
 }
 
@@ -44,20 +46,3 @@
   justify-content: space-around;
   background: white;
 }
-
-
-// .navbar-lewagon {
-//   justify-content: space-between;
-//   background: $verylightblue;
-//   color: $white;
-// }
-
-// .navbar-lewagon .navbar-collapse {
-//   flex-grow: 0;
-// }
-
-// .navbar-lewagon .navbar-brand img {
-//   width: 40px;
-//   height: 30px;
-//   border-radius: 3px;
-// }
