--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -21,12 +21,12 @@
     </div>
 
     <div class="row ticket-infos">
-      <div class="col-3">
-        <div class="card-body col-12" >
+      <div class="col-12 col-lg-3">
+        <div class="card-body col-12 col-lg-12" >
           <p class="hidescroll" ><strong>Requester :</strong> <%= @chatroom.ticket.client_email %></p>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-lg-3">
         <div class="card-body" >
           <p class="hidescroll"><strong>Wallet :</strong> <%= @chatroom.ticket.wallet_address %></p>
         </div>
