--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12 col-sm-12 col-lg-6">
       <div class="form-login">
         <h2>Edit My Account</h2>
 
