--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/navbar", home: true %>
 
-<div class="container-fluid ">
+<div class="container-fluid">
   <div class="container-dorothy">
     <div class="row m-3 justify-content-center">
       <div class="col-lg-6 col-md-8 col-sm-12">
@@ -11,16 +11,10 @@
       </div>
       <div class="col-lg-6 col-md-8 col-sm-12 mt-3">
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner" style="height: 500px;"> 
+          <div class="carousel-inner" style="height: 500px;">
             <div class="carousel-item active">
               <img src="https://as2.ftcdn.net/v2/jpg/04/94/81/79/1000_F_494817999_XhozLcbONJGQcOCV6vnidux5eHyytvpn.jpg" class="d-block w-100" alt="...">
             </div>
-            <%# <div class="carousel-item">
-              <img src="https://as2.ftcdn.net/v2/jpg/03/06/82/35/1000_F_306823504_TYT9uCN3CXoBf3u1G5nvA49Ab1RyazYu.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="https://as1.ftcdn.net/v2/jpg/04/28/71/28/1000_F_428712888_retbJcXmNCkADSne4lyw3boFQ6PXTZwB.jpg" class="d-block w-100" alt="...">
-            </div> %>
           </div>
         </div>
       </div>
@@ -29,12 +23,15 @@
 </div>
 
 
-
-<div class="footer">
-  <div class="footer-links">
-    <a href="https://github.com/AngelLozan/crypto_zendesk" target="_blank"><i class="fab fa-github"></i></a>
-  </div>
-  <div class="footer-copyright">
-    ChainCare is created with <i class="fas fa-heart"></i> by Tobi, Scott, Dorothy, Corentin, Elena
+<div class="container">
+  <div class="row col-12 col-lg-12">
+    <div class="footer">
+      <div class="footer-links">
+        <a href="https://github.com/AngelLozan/crypto_zendesk" target="_blank"><i class="fab fa-github"></i></a>
+      </div>
+      <div class="footer-copyright">
+        ChainCare is created with <i class="fas fa-heart"></i> by Tobi, Scott, Dorothy, Corentin, Elena
+      </div>
+    </div>
   </div>
 </div>
