--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,26 +6,24 @@
   padding-bottom: 20px;
 }
 
-.home-container {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  color: $verydarkblue;
-}
-
 h1{
   font-size: 72px;
 }
 
-h2{
+h2 {
   font-size:48px;
   font-weight: bold;
 }
-.container-dorothy{
+
+.container-dorothy {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 320px;
+}
+
+.container-dorothy img {
+  height: 100%;
 }
 
 .features-box {
@@ -50,35 +48,6 @@ h2{
 
 .feature-box:last-child {
   margin-right: 0;
-}
-.whycontainer {
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  margin-top: 50px;
-}
-
-.image-container {
-  flex: 0 0 auto;
-  margin-right: 20px; 
-float: right;
-}
-
-.paragraph-container {
-  flex: 1 1 auto;
-  float: left;
-  align-items: center;
-}
-.resized-image{
-  width:300px;
-  height:auto;
-  // border-radius: 50%;
-  height:150px;
-  margin-top: 60px;
-  
-}
-.get-started{
- align-items: center ;
 }
 
 .card-product {
