--- a/app/views/ticket_mailer/secret.text.erb
+++ b/app/views/ticket_mailer/secret.text.erb
@@ -1,3 +1,7 @@
-Ticket#secret
+<h1> Hi <%= @ticket.client_email.split("@")[0] %>,</h1>
 
-<%= @greeting %>, find me in app/views/ticket_mailer/secret.text.erb
+<p>
+  Here is the url to your support help desk chatroom:
+
+  <a href="<%= "https://www.chaincare.tech/chatrooms/#{@ticket.chatroom.id}" %>">Take me to a support agent</a>
+</p>
