--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,3 +44,12 @@ tbody > * > * {
   display: flex;
   justify-content: flex-end;
 }
+
+.table th .current {
+  padding-right: 12px;
+  color: $lightblue;
+}
+
+.table th > a {
+  text-decoration: none;
+}
